--- a/DynamicPDFCreator/Properties/ErrorCodes.resx
+++ b/DynamicPDFCreator/Properties/ErrorCodes.resx
@@ -117,7 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ERROR_ABSENDER" xml:space="preserve">
+    <value>Es gab ein Problem mit dem Absender. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_ANSCHREIBENTYP" xml:space="preserve">
+    <value>Es gab ein Problem mit dem Typ des Anschreibens. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_ANSPRECHPARTNER" xml:space="preserve">
+    <value>Es gab ein Problem mit dem Ansprechpartner. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_ANSPRECHPARTNER_BAU" xml:space="preserve">
+    <value>Es gab ein Problem mit dem AnsprechpartnerBau. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_AUSFUEHRUNGSZEITRAUM" xml:space="preserve">
+    <value>Es gab ein Problem mit dem Ausführungszeitraum. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_BESCHREIBUNGMASSNAHME" xml:space="preserve">
+    <value>Anscheinend befinden sich unerlaubte Zeichen im Textfeld "Beischreibung der Maßnahme"</value>
+  </data>
+  <data name="ERROR_BESCHREIBUNG_ABGESPROCHEN_MIT" xml:space="preserve">
+    <value>Anscheinend befinden sich unerlaubte Zeichen im Textfeld "Beschreibung mit wem das Vorhaben abgesprochen wurde"</value>
+  </data>
+  <data name="ERROR_CHECKBOXEN" xml:space="preserve">
+    <value>Es gab ein Problem mit den Checkboxen. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_DATUM" xml:space="preserve">
+    <value>Es gab ein Problem mit dem Datum. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_EMPFAENGER" xml:space="preserve">
+    <value>Es gab ein Problem mit dem Empfänger. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_ORTDERMASSNAHME" xml:space="preserve">
+    <value>Anscheinend befinden sich unerlaubte Zeichen im Textfeld "Ort der Maßnahme"</value>
+  </data>
   <data name="ERROR_SMNUMMER" xml:space="preserve">
     <value>SMNummer nicht gefunden</value>
+  </data>
+  <data name="ERROR_WESI_TEAM_ADRESSE" xml:space="preserve">
+    <value>Es gab ein Problem mit der Wesi Teamadresse. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
+  </data>
+  <data name="ERROR_ZUSATZ" xml:space="preserve">
+    <value>Es gab ein Problem mit den Zusatzfeldern. Bitte erneut probieren oder aaron.boden@eictronic.de bzw. 036071369018 kontaktiern</value>
   </data>
 </root>
