Farben Angepasst, Überprüfen der Eingaben und Sperren/Entsperren der Felder ausgelagert

--- a/DynamicPDFCreator/Properties/ErrorCodes.resx
+++ b/DynamicPDFCreator/Properties/ErrorCodes.resx
@@ -148,7 +148,7 @@
     <value>Bitte Empfänger auswählen!</value>
   </data>
   <data name="ERROR_ORTDERMASSNAHME" xml:space="preserve">
-    <value>Bitte Ort der Maßnahme ausfüllen!</value>
+    <value>Bitte den Betreff ausfüllen!</value>
   </data>
   <data name="ERROR_SMNUMMER" xml:space="preserve">
     <value>SMNummer nicht gefunden</value>
