--- a/DynamicPDFCreator/MainForm.resx
+++ b/DynamicPDFCreator/MainForm.resx
@@ -1764,6 +1764,60 @@
   <data name="groupBox1.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
   </data>
+  <data name="label8.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label8.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Courier New, 8.25pt</value>
+  </data>
+  <data name="label8.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="label8.Location" type="System.Drawing.Point, System.Drawing">
+    <value>19, 446</value>
+  </data>
+  <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
+    <value>28, 14</value>
+  </data>
+  <data name="label8.TabIndex" type="System.Int32, mscorlib">
+    <value>88</value>
+  </data>
+  <data name="label8.Text" xml:space="preserve">
+    <value>Ort</value>
+  </data>
+  <data name="&gt;&gt;label8.Name" xml:space="preserve">
+    <value>label8</value>
+  </data>
+  <data name="&gt;&gt;label8.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label8.Parent" xml:space="preserve">
+    <value>groupBox1</value>
+  </data>
+  <data name="&gt;&gt;label8.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="cmb_ort.Location" type="System.Drawing.Point, System.Drawing">
+    <value>93, 443</value>
+  </data>
+  <data name="cmb_ort.Size" type="System.Drawing.Size, System.Drawing">
+    <value>286, 22</value>
+  </data>
+  <data name="cmb_ort.TabIndex" type="System.Int32, mscorlib">
+    <value>87</value>
+  </data>
+  <data name="&gt;&gt;cmb_ort.Name" xml:space="preserve">
+    <value>cmb_ort</value>
+  </data>
+  <data name="&gt;&gt;cmb_ort.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cmb_ort.Parent" xml:space="preserve">
+    <value>groupBox1</value>
+  </data>
+  <data name="&gt;&gt;cmb_ort.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="btn_clear_all.Location" type="System.Drawing.Point, System.Drawing">
     <value>822, 12</value>
   </data>
@@ -1786,7 +1840,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_clear_all.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="btn_remove_all.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1819,7 +1873,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_remove_all.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="btn_remove_selected.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1852,7 +1906,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_remove_selected.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="tb_zusatzanlage.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -1876,7 +1930,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_zusatzanlage.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="btn_add_zusatzanlagen.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1909,7 +1963,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_add_zusatzanlagen.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="label28.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1942,7 +1996,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label28.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>7</value>
   </data>
   <data name="listb_zusatzanlagen.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -1969,7 +2023,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;listb_zusatzanlagen.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>8</value>
   </data>
   <data name="cb_untervollmacht.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1996,7 +2050,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_untervollmacht.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>9</value>
   </data>
   <data name="label29.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2029,7 +2083,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label29.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>10</value>
   </data>
   <data name="btn_bearbeiten_wesi.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Zoom</value>
@@ -2062,7 +2116,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_bearbeiten_wesi.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>11</value>
   </data>
   <data name="label30.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2095,7 +2149,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label30.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>12</value>
   </data>
   <data name="label31.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2128,7 +2182,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label31.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>13</value>
   </data>
   <data name="cmb_ansprechpartnerBau.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -2158,7 +2212,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_ansprechpartnerBau.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>14</value>
   </data>
   <data name="label32.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2191,7 +2245,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label32.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>15</value>
   </data>
   <data name="label33.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2224,7 +2278,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label33.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>16</value>
   </data>
   <data name="rtb_WesiAdresse.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2251,7 +2305,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;rtb_WesiAdresse.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>17</value>
   </data>
   <data name="cb_plansaetze.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2278,7 +2332,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_plansaetze.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>18</value>
   </data>
   <data name="cmb_wesie.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2305,7 +2359,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_wesie.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>19</value>
   </data>
   <data name="cb_beteiligte.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2332,7 +2386,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_beteiligte.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>20</value>
   </data>
   <data name="cb_techBeschreibung.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2359,7 +2413,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_techBeschreibung.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>21</value>
   </data>
   <data name="label35.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2392,7 +2446,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label35.ZOrder" xml:space="preserve">
-    <value>20</value>
+    <value>22</value>
   </data>
   <data name="tb_WesiMail.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2416,7 +2470,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_WesiMail.ZOrder" xml:space="preserve">
-    <value>21</value>
+    <value>23</value>
   </data>
   <data name="label37.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2449,7 +2503,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label37.ZOrder" xml:space="preserve">
-    <value>22</value>
+    <value>24</value>
   </data>
   <data name="label38.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2482,7 +2536,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label38.ZOrder" xml:space="preserve">
-    <value>23</value>
+    <value>25</value>
   </data>
   <data name="btn_suchen.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -2515,7 +2569,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_suchen.ZOrder" xml:space="preserve">
-    <value>24</value>
+    <value>26</value>
   </data>
   <data name="btn_bearbeiten.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Zoom</value>
@@ -2545,7 +2599,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_bearbeiten.ZOrder" xml:space="preserve">
-    <value>25</value>
+    <value>27</value>
   </data>
   <data name="datePicker.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2569,7 +2623,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;datePicker.ZOrder" xml:space="preserve">
-    <value>26</value>
+    <value>28</value>
   </data>
   <data name="datePickerAusfuehrungEnde.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2593,7 +2647,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;datePickerAusfuehrungEnde.ZOrder" xml:space="preserve">
-    <value>27</value>
+    <value>29</value>
   </data>
   <data name="lb_SMNumber.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2626,7 +2680,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_SMNumber.ZOrder" xml:space="preserve">
-    <value>28</value>
+    <value>30</value>
   </data>
   <data name="tb_smNummer.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2650,7 +2704,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_smNummer.ZOrder" xml:space="preserve">
-    <value>29</value>
+    <value>31</value>
   </data>
   <data name="lb_anschreibenTyp.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2683,7 +2737,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_anschreibenTyp.ZOrder" xml:space="preserve">
-    <value>30</value>
+    <value>32</value>
   </data>
   <data name="cmb_anschreibenTyp.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2710,7 +2764,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_anschreibenTyp.ZOrder" xml:space="preserve">
-    <value>31</value>
+    <value>33</value>
   </data>
   <data name="tb_ortMassnahme.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2734,7 +2788,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_ortMassnahme.ZOrder" xml:space="preserve">
-    <value>32</value>
+    <value>34</value>
   </data>
   <data name="cmb_empfaenger.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2761,7 +2815,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_empfaenger.ZOrder" xml:space="preserve">
-    <value>33</value>
+    <value>35</value>
   </data>
   <data name="lb_empfaenger.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2794,7 +2848,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_empfaenger.ZOrder" xml:space="preserve">
-    <value>34</value>
+    <value>36</value>
   </data>
   <data name="cmb_absender.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2821,7 +2875,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_absender.ZOrder" xml:space="preserve">
-    <value>35</value>
+    <value>37</value>
   </data>
   <data name="lb_absender.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2854,7 +2908,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_absender.ZOrder" xml:space="preserve">
-    <value>36</value>
+    <value>38</value>
   </data>
   <data name="lb_datum.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2887,7 +2941,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_datum.ZOrder" xml:space="preserve">
-    <value>37</value>
+    <value>39</value>
   </data>
   <data name="datePickerAusfuehrung.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2911,7 +2965,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;datePickerAusfuehrung.ZOrder" xml:space="preserve">
-    <value>38</value>
+    <value>40</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2944,7 +2998,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>39</value>
+    <value>41</value>
   </data>
   <data name="cmb_Ansprechpartner.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2971,7 +3025,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_Ansprechpartner.ZOrder" xml:space="preserve">
-    <value>40</value>
+    <value>42</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -3004,7 +3058,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>41</value>
+    <value>43</value>
   </data>
   <data name="label3.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -3037,7 +3091,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>42</value>
+    <value>44</value>
   </data>
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -3049,7 +3103,7 @@
     <value>NoControl</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>20, 434</value>
+    <value>19, 508</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>245, 28</value>
@@ -3071,13 +3125,13 @@ abgesprochen wurde</value>
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>43</value>
+    <value>45</value>
   </data>
   <data name="rtb_absprachen.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
   </data>
   <data name="rtb_absprachen.Location" type="System.Drawing.Point, System.Drawing">
-    <value>20, 463</value>
+    <value>19, 537</value>
   </data>
   <data name="rtb_absprachen.Size" type="System.Drawing.Size, System.Drawing">
     <value>302, 36</value>
@@ -3098,7 +3152,7 @@ abgesprochen wurde</value>
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;rtb_absprachen.ZOrder" xml:space="preserve">
-    <value>44</value>
+    <value>46</value>
   </data>
   <data name="groupBox1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -3107,7 +3161,7 @@ abgesprochen wurde</value>
     <value>0, -6</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>953, 579</value>
+    <value>953, 592</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>52</value>
