--- a/DynamicPDFCreator/MainForm.resx
+++ b/DynamicPDFCreator/MainForm.resx
@@ -1416,6 +1416,63 @@
   <data name="groupBox1.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
   </data>
+  <data name="label10.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label10.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Courier New, 8.25pt</value>
+  </data>
+  <data name="label10.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="label10.Location" type="System.Drawing.Point, System.Drawing">
+    <value>19, 56</value>
+  </data>
+  <data name="label10.Size" type="System.Drawing.Size, System.Drawing">
+    <value>105, 14</value>
+  </data>
+  <data name="label10.TabIndex" type="System.Int32, mscorlib">
+    <value>92</value>
+  </data>
+  <data name="label10.Text" xml:space="preserve">
+    <value>zus. SM-Nummer</value>
+  </data>
+  <data name="&gt;&gt;label10.Name" xml:space="preserve">
+    <value>label10</value>
+  </data>
+  <data name="&gt;&gt;label10.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label10.Parent" xml:space="preserve">
+    <value>groupBox1</value>
+  </data>
+  <data name="&gt;&gt;label10.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="tb_addSM_Nummer.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Courier New, 8.25pt</value>
+  </data>
+  <data name="tb_addSM_Nummer.Location" type="System.Drawing.Point, System.Drawing">
+    <value>130, 56</value>
+  </data>
+  <data name="tb_addSM_Nummer.Size" type="System.Drawing.Size, System.Drawing">
+    <value>249, 20</value>
+  </data>
+  <data name="tb_addSM_Nummer.TabIndex" type="System.Int32, mscorlib">
+    <value>91</value>
+  </data>
+  <data name="&gt;&gt;tb_addSM_Nummer.Name" xml:space="preserve">
+    <value>tb_addSM_Nummer</value>
+  </data>
+  <data name="&gt;&gt;tb_addSM_Nummer.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tb_addSM_Nummer.Parent" xml:space="preserve">
+    <value>groupBox1</value>
+  </data>
+  <data name="&gt;&gt;tb_addSM_Nummer.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="cb_zustimmungsbescheid.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -1441,7 +1498,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_zustimmungsbescheid.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="label9.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1474,7 +1531,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label9.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="label8.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1507,7 +1564,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label8.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="cmb_ort.Location" type="System.Drawing.Point, System.Drawing">
     <value>93, 443</value>
@@ -1528,7 +1585,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_ort.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="btn_clear_all.Location" type="System.Drawing.Point, System.Drawing">
     <value>822, 12</value>
@@ -1552,7 +1609,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_clear_all.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="btn_remove_all.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1585,7 +1642,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_remove_all.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>7</value>
   </data>
   <data name="btn_remove_selected.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1618,7 +1675,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_remove_selected.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>8</value>
   </data>
   <data name="tb_zusatzanlage.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -1642,7 +1699,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_zusatzanlage.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>9</value>
   </data>
   <data name="btn_add_zusatzanlagen.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1675,7 +1732,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_add_zusatzanlagen.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>10</value>
   </data>
   <data name="label28.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1708,7 +1765,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label28.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>11</value>
   </data>
   <data name="listb_zusatzanlagen.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -1735,7 +1792,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;listb_zusatzanlagen.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>12</value>
   </data>
   <data name="cb_untervollmacht.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1762,7 +1819,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_untervollmacht.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>13</value>
   </data>
   <data name="label29.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1795,7 +1852,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label29.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>14</value>
   </data>
   <data name="btn_bearbeiten_wesi.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Zoom</value>
@@ -1828,7 +1885,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_bearbeiten_wesi.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>15</value>
   </data>
   <data name="label30.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1861,7 +1918,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label30.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>16</value>
   </data>
   <data name="label31.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1894,7 +1951,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label31.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>17</value>
   </data>
   <data name="cmb_ansprechpartnerBau.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -1924,7 +1981,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_ansprechpartnerBau.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>18</value>
   </data>
   <data name="label32.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1957,7 +2014,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label32.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>19</value>
   </data>
   <data name="label33.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1990,7 +2047,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label33.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>20</value>
   </data>
   <data name="rtb_WesiAdresse.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2017,7 +2074,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;rtb_WesiAdresse.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>21</value>
   </data>
   <data name="cb_plansaetze.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2044,7 +2101,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_plansaetze.ZOrder" xml:space="preserve">
-    <value>20</value>
+    <value>22</value>
   </data>
   <data name="cmb_wesie.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2071,7 +2128,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_wesie.ZOrder" xml:space="preserve">
-    <value>21</value>
+    <value>23</value>
   </data>
   <data name="cb_beteiligte.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2098,7 +2155,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_beteiligte.ZOrder" xml:space="preserve">
-    <value>22</value>
+    <value>24</value>
   </data>
   <data name="cb_techBeschreibung.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2125,7 +2182,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cb_techBeschreibung.ZOrder" xml:space="preserve">
-    <value>23</value>
+    <value>25</value>
   </data>
   <data name="label35.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2158,7 +2215,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label35.ZOrder" xml:space="preserve">
-    <value>24</value>
+    <value>26</value>
   </data>
   <data name="tb_WesiMail.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2182,7 +2239,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_WesiMail.ZOrder" xml:space="preserve">
-    <value>25</value>
+    <value>27</value>
   </data>
   <data name="label37.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2215,7 +2272,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label37.ZOrder" xml:space="preserve">
-    <value>26</value>
+    <value>28</value>
   </data>
   <data name="label38.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2248,7 +2305,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label38.ZOrder" xml:space="preserve">
-    <value>27</value>
+    <value>29</value>
   </data>
   <data name="btn_suchen.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -2281,7 +2338,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_suchen.ZOrder" xml:space="preserve">
-    <value>28</value>
+    <value>30</value>
   </data>
   <data name="btn_bearbeiten.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Zoom</value>
@@ -2311,7 +2368,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;btn_bearbeiten.ZOrder" xml:space="preserve">
-    <value>29</value>
+    <value>31</value>
   </data>
   <data name="datePicker.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2335,7 +2392,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;datePicker.ZOrder" xml:space="preserve">
-    <value>30</value>
+    <value>32</value>
   </data>
   <data name="datePickerAusfuehrungEnde.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2359,7 +2416,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;datePickerAusfuehrungEnde.ZOrder" xml:space="preserve">
-    <value>31</value>
+    <value>33</value>
   </data>
   <data name="lb_SMNumber.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2392,7 +2449,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_SMNumber.ZOrder" xml:space="preserve">
-    <value>32</value>
+    <value>34</value>
   </data>
   <data name="tb_smNummer.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2416,7 +2473,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_smNummer.ZOrder" xml:space="preserve">
-    <value>33</value>
+    <value>35</value>
   </data>
   <data name="lb_anschreibenTyp.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2449,7 +2506,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_anschreibenTyp.ZOrder" xml:space="preserve">
-    <value>34</value>
+    <value>36</value>
   </data>
   <data name="cmb_anschreibenTyp.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2476,7 +2533,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_anschreibenTyp.ZOrder" xml:space="preserve">
-    <value>35</value>
+    <value>37</value>
   </data>
   <data name="tb_ortMassnahme.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2500,7 +2557,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;tb_ortMassnahme.ZOrder" xml:space="preserve">
-    <value>36</value>
+    <value>38</value>
   </data>
   <data name="cmb_empfaenger.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2527,7 +2584,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_empfaenger.ZOrder" xml:space="preserve">
-    <value>37</value>
+    <value>39</value>
   </data>
   <data name="lb_empfaenger.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2560,7 +2617,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_empfaenger.ZOrder" xml:space="preserve">
-    <value>38</value>
+    <value>40</value>
   </data>
   <data name="cmb_absender.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2587,7 +2644,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_absender.ZOrder" xml:space="preserve">
-    <value>39</value>
+    <value>41</value>
   </data>
   <data name="lb_absender.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2620,7 +2677,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_absender.ZOrder" xml:space="preserve">
-    <value>40</value>
+    <value>42</value>
   </data>
   <data name="lb_datum.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2653,7 +2710,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;lb_datum.ZOrder" xml:space="preserve">
-    <value>41</value>
+    <value>43</value>
   </data>
   <data name="datePickerAusfuehrung.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2677,7 +2734,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;datePickerAusfuehrung.ZOrder" xml:space="preserve">
-    <value>42</value>
+    <value>44</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2710,7 +2767,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>43</value>
+    <value>45</value>
   </data>
   <data name="cmb_Ansprechpartner.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
@@ -2737,7 +2794,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;cmb_Ansprechpartner.ZOrder" xml:space="preserve">
-    <value>44</value>
+    <value>46</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2770,7 +2827,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>45</value>
+    <value>47</value>
   </data>
   <data name="label3.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2803,7 +2860,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>46</value>
+    <value>48</value>
   </data>
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2837,7 +2894,7 @@ abgesprochen wurde</value>
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>47</value>
+    <value>49</value>
   </data>
   <data name="rtb_absprachen.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
@@ -2864,7 +2921,7 @@ abgesprochen wurde</value>
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;rtb_absprachen.ZOrder" xml:space="preserve">
-    <value>48</value>
+    <value>50</value>
   </data>
   <data name="groupBox1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Courier New, 8.25pt</value>
